# kubetsu

./: Cargo.toml  LISENCE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
kubetsu/: Cargo.toml  README.md  UPGRADE.md
kubetsu-fake/: Cargo.toml  README.md
kubetsu-fake/src/: lib.rs
kubetsu-no-std-tests/: Cargo.toml
kubetsu-no-std-tests/src/: lib.rs
kubetsu-serde/: Cargo.toml  README.md
kubetsu-serde/src/: lib.rs
kubetsu-sqlx/: Cargo.toml  README.md
kubetsu-sqlx/src/: lib.rs
kubetsu-tests/: Cargo.toml
kubetsu-tests/src/: lib.rs
kubetsu/src/: lib.rs
kubetsu/src/id/test/: float.rs  int.rs  str.rs
kubetsu/src/macros/: mod.rs  test.rs
src/: id.rs  lib.rs
src/id/: test.rs
src/id/test/: float.rs  int.rs  sqlx.rs  str.rs
src/id/test/sqlx/: any.rs  mysql.rs  postgres.rs  sqlite.rs
src/macros/: mod.rs  test.rs
