[package]
name = "kubetsu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
all = ["serde", "fake", "sqlx-mysql", "sqlx-sqlite"]
serde = ["dep:serde", "dep:serde_json"]
fake = ["dep:fake"]
sqlx = ["dep:sqlx", "dep:tokio"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]

[dependencies]
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
fake  = { version = "2", features = ["derive"], optional = true }
sqlx  = { version = "0", features = ["runtime-tokio"], optional = true }
tokio  = { version = "1", features = ["macros", "rt"], optional = true }
