[package]
name = "kubetsu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default  = []
all = ["serde", "fake", "sqlx-mysql", "sqlx-sqlite"]
serde = ["dep:serde"]
fake = ["dep:fake"]
sqlx = ["dep:sqlx"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]

[dependencies]
serde = { version = "1", default-features = false, optional = true }
fake  = { version = "2", features = ["derive"], optional = true }
sqlx  = { version = "0", default-features = false, features = [], optional = true }

[dev-dependencies]
sqlx  = { version = "0", features = ["runtime-tokio"] }
tokio  = { version = "1", features = ["macros", "rt"] }
serde_json = { version = "1" }
