[package]
name = "kubetsu"
version = "0.1.1"
edition = "2021"

authors = ["Keiji Yoshimi"]

readme = "README.md"

license = "MIT"

description = "distinguish value type of other struct"

homepage = "https://github.com/walf443/kubetsu"
repository = "https://github.com/walf443/kubetsu.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default  = []
all = ["serde", "fake", "sqlx-mysql", "sqlx-sqlite", "sqlx-postgres", "sqlx-any"]
serde = ["dep:serde"]
fake = ["dep:fake"]
sqlx = ["dep:sqlx"]
sqlx-any = ["sqlx", "sqlx/any"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-postgres = ["sqlx", "sqlx/postgres"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]

[dependencies]
serde = { version = "1", default-features = false, optional = true }
fake  = { version = "2", features = ["derive"], optional = true }
sqlx  = { version = "0", default-features = false, features = [], optional = true }

[dev-dependencies]
sqlx  = { version = "0", features = ["runtime-tokio", "macros", "sqlite"] }
tokio  = { version = "1", features = ["macros", "rt"] }
serde_json = { version = "1" }
