[package]
name = "kubetsu-fake"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"

authors = ["Keiji Yoshimi"]

license = "MIT"

readme = "README.md"

description = "fake support for kubetsu ID types"

keywords = ["fake", "dummy", "newtype", "id", "testing"]
categories = ["development-tools::testing"]

homepage = "https://github.com/walf443/kubetsu"
repository = "https://github.com/walf443/kubetsu.git"

[dependencies]
kubetsu = { version = "0.7", path = "../kubetsu" }
fake = { version = "5", features = ["derive"] }
