[package]
name = "kubetsu-serde"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

authors = ["Keiji Yoshimi"]

license = "MIT"

readme = "README.md"

description = "serde support for kubetsu ID types"

homepage = "https://github.com/walf443/kubetsu"
repository = "https://github.com/walf443/kubetsu.git"

[dependencies]
kubetsu = { version = "0.7", path = "../kubetsu" }
serde = { version = "1", default-features = false }

[dev-dependencies]
serde_json = { version = "1" }
