[package]
name = "kubetsu"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"

authors = ["Keiji Yoshimi"]

readme = "README.md"

license = "MIT"

description = "distinguish value type of other struct"

homepage = "https://github.com/walf443/kubetsu"
repository = "https://github.com/walf443/kubetsu.git"

include = ["src/**/*", "Cargo.toml", "README.md", "UPGRADE.md", "LICENSE"]
